--- a/app/views/training_platform/share/_left_nav.html.erb
+++ b/app/views/training_platform/share/_left_nav.html.erb
@@ -74,14 +74,14 @@
         <!-- <li class="<%= 'active' if params[:controller] == "training_platform/task_categories"%>">
           <%= link_to new_training_platform_project_task_category_path(@project.id), remote: true do %>
             <span class="glyphicon glyphicon-plus"></span>
-            <span class="menu-text">任务分类</span>
+            <span class="menu-text">任务列表</span>
           <% end %>
         </li> -->
 
         <div class="sidebar-shortcuts" id="sidebar-shortcuts">
           <div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
           <span class="btn btn-success btn-sm tooltip-success" data-rel="tooltip" data-placement="bottom" title="新建任务列表">
-              <%= link_to( new_training_platform_project_task_category_path,  "data-placement" => "opt", format: :js, remote: true) do %>
+              <%= link_to( new_training_platform_project_task_category_path(@project.id),  "data-placement" => "opt", format: :js, remote: true) do %>
               <i class="icon-tasks" style="color:#fff"></i>
               <% end %>
           </span>
