--- a/app/views/training_platform/task_categories/_form.html.erb
+++ b/app/views/training_platform/task_categories/_form.html.erb
@@ -4,11 +4,22 @@
   <!-- Tab panes -->
   <div class="tab-content main">
     <div role="tabpanel" class="tab-pane active" id="home">
+      <%= link_to "新增", "javascript:void(0);", id: "toggle-link", class: "btn btn-default"%>
+      <hr class="new-top">
+      <div class="new-task-category">
+        <%= simple_form_for TaskCategory.new, url: training_platform_project_task_categories_path, remote: true do |f|%>
+          <%= f.input :name, as: :string, placeholder: '请输入任务列表名称' %>
+          <%= f.input :description, as: :text, placeholder: '请输入任务列表描述' %>
+          <%= f.submit "添加", class: "btn btn-info-tp"%>
+        <% end %>
+      </div>
+      <hr class="new-bottom">
+      <% if @task_categories.present? %>
         <table class="table table-hover ace_modal_tab">
           <thead>
             <tr>
-              <th class="text-center">任务分类名称</th>
-              <th class="text-center">任务分类描述</th>
+              <th class="text-center">任务列表名称</th>
+              <th class="text-center">任务列表描述</th>
               <th class="text-center">操作</th>
             </tr>
           </thead>
@@ -16,24 +27,23 @@
             <%= render partial: "task_category", collection: @task_categories, locals: {project: @project} %>
           </tbody>
         </table>
-
-        <%= simple_form_for TaskCategory.new, url: training_platform_project_task_categories_path, remote: true do |f|%>
-          <%= f.input :name, as: :string, placeholder: '请输入任务分类名称' %>
-          <%= f.input :description, as: :text, placeholder: '请输入任务分类描述' %>
-          <%= f.submit "添加", class: "btn btn-info-tp"%>
-        <% end %>
-      </div>
+      <% else %>
+        <div class="alert alert-warning" role="alert">暂无任务列表</div>
+      <% end %>
+    </div>
 
       <!-- 项目成员类目 -->
       <div role="tabpanel" class="tab-pane" id="profile">
         <%= form_for Notification.new, url: validate_training_platform_project_notifications_path, remote: true do |f|%>
-          <div id="error-info"></div>
+          <div class="col-xs-8">
+            <div id="error-info" class="text-danger"></div>
+          </div>
           <div class="col-xs-8 ace_modal_tab1">
             <div class="form-group">
               <%= text_field_tag :user_name, nil, placeholder: "请输入被邀请人的用户名...", 'data-provide': "typeahead", 'data-url': "#{api_users_path}", class: "ace_modal_form form-control", id: "ace_modal_form", autocomplete: "off" %>
             </div>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-4 text-center">
             <%= f.submit "发送邀请", class: "btn" %>
           </div>
         <% end %>
@@ -49,7 +59,7 @@
       <%= simple_form_for(@project, url: training_platform_project_path(@project), remote: true, format: :js, wrapper: :horizontal_form_col210 ,html: {id: "projectFormModal", class: "form-horizontal"}) do |f| %>
 
         <%= f.input :name, as: :string, required: false, autofocus: true %>
-        <%= f.input :description, as: :text, required: false, input_html: {cols: 6} %>
+        <%= f.input :description, as: :text, required: false, input_html: { cols: 6 } %>
         <%= f.input :is_public, collection: Project::IsPublic.invert, as: :radio_buttons, wrapper: "horizontal_radio_and_checkboxes210", item_wrapper_class: "radio-inline" %>
         <div class="row tp_m">
           <div class="col-sm-6">
@@ -62,6 +72,18 @@
     <% end %>
   </div>
 </div>
+
+<script type="text/javascript">
+  $(function(){
+    $(".new-task-category").hide();
+    $("hr.new-top").hide();
+    $("#toggle-link").click(function(){
+      $(this).hide();
+      $("hr.new-bottom").show();
+      $(".new-task-category").show();
+    });
+  });
+</script>
 
 <!-- typeahead输入关键词自动提示效果 -->
 <script type="text/javascript">
