--- a/app/views/training_platform/tasks/index.html.erb
+++ b/app/views/training_platform/tasks/index.html.erb
@@ -351,7 +351,7 @@
 							<div class="col-xs-4 a-col">
 								<h4>业务需求讨论</h4>
 							</div>
-							<div class="dropdown col-xs-8 my-bbtn">
+							<div class="dropdown col-xs-8">
 								<button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 									待办中
 									<span class="caret my-caret"></span>
@@ -364,18 +364,17 @@
 								</ul>
 							</div><br>
 							<div class="col-xs-12">
-								<form class="form-inline">
-									<div class="col-xs-8">
-										<div class="form-group">
-											<input type="password" class="form-control my-controller" id="inputPassword2" placeholder="请输入任务描述或者任务标签">
+								<form class="form-horizontal">
+									<div class="form-group">
+										<div class="col-xs-8">
+											<input type="email" class="form-control" id="inputEmail3" placeholder="请输入任务描述或者任务标签">
 										</div>
-									</div>
-
-									<div class="col-xs-2">
-										<button type="submit" class="btn btn-default">描述提交</button>
-									</div>
-									<div class="col-xs-2">
-										<button type="submit" class="btn btn-default">添加标签</button>
+										<div class="col-xs-2">
+											<botton class="btn btn-default submit-btn">描述提交</botton>
+										</div>
+										<div class="col-xs-2">
+											<botton class="btn btn-default">添加标签</botton>
+										</div>
 									</div>
 								</form>
 							</div>
