delete border of btn-default

--- a/app/assets/stylesheets/application/variables.css.scss
+++ b/app/assets/stylesheets/application/variables.css.scss
@@ -26,3 +26,6 @@ $navbar-margin-bottom: 0;
 $navbar-inverse-link-color: #fff;
 $navbar-inverse-link-hover-color: $color-green;
 $navbar-inverse-link-active-color: #fff;
+
+//btn border
+$btn-default-border: transparent;
