--- a/app/views/share/_user_info.html.erb
+++ b/app/views/share/_user_info.html.erb
@@ -6,7 +6,7 @@
 	</li>
 	<li>
 		<%= link_to("#") do %>
-			<i class="icon-user"></i>&nbsp;&nbsp;<%= current_user.mobile %>
+			<i class="icon-user"></i>&nbsp;&nbsp;<%= current_user.show_name %>
 		<% end %>
 	</li>
 	<li>
