--- a/app/views/share/_user_info.html.erb
+++ b/app/views/share/_user_info.html.erb
@@ -1,11 +1,11 @@
 <% if user_signed_in? %>
 	<li>
-		<a href="#">
-			<i class="icon-bell-alt icon-animated-bell"><span class="badge-count">6</span></i>
-		</a>
+		<%= link_to(my_messages_user_index_path) do %>
+			<i class="icon-bell-alt icon-animated-bell"><span class="badge-count"><%= current_user.user_notifications.unreads.count %></span></i>
+		<% end %>
 	</li>
 	<li>
-		<%= link_to("#") do %>
+		<%= link_to(my_courses_user_index_path) do %>
 			<i class="icon-user"></i>&nbsp;&nbsp;<%= current_user.show_name %>
 		<% end %>
 	</li>
