flash message css

--- a/app/views/share/_flash_message.html.erb
+++ b/app/views/share/_flash_message.html.erb
@@ -7,7 +7,7 @@
 <script type="text/javascript">
   $(function(){
     $("#showFlashMessage").popover({
-      template: '<div class="flash-message alert alert-info" role="tooltip"><div class="popover-content"></div></div>',
+      template: '<div class="flash-message alert alert-info text-center" role="tooltip" style="margin: 0px;"><div class="popover-content"></div></div>',
       animation: true,
       delay: { "show": 500, "hide": 500 }
     }).click();
