--- a/app/views/training_platform/projects/_left_nav.html.erb
+++ b/app/views/training_platform/projects/_left_nav.html.erb
@@ -45,7 +45,7 @@
 
       
 
-      <div class="sidebar-shortcuts" id="sidebar-shortcuts">
+      <!-- <div class="sidebar-shortcuts" id="sidebar-shortcuts">
         <div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
           <button class="btn btn-success">
             <i class="icon-signal"></i>
@@ -73,7 +73,7 @@
 
           <span class="btn btn-danger"></span>
         </div>
-      </div><!-- #sidebar-shortcuts -->
+      </div> --><!-- #sidebar-shortcuts -->
     </ul><!-- /.nav-list -->
 
     <div class="sidebar-collapse" id="sidebar-collapse">
