--- a/app/views/training_platform/share/_task_show.html.erb
+++ b/app/views/training_platform/share/_task_show.html.erb
@@ -79,7 +79,9 @@
     <div class="row task-content">
       <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12 task-description">
       <h4> <%= @task.name %></h4>
-        这里是任务描述
+      <div class="dis">
+        <span>这里是任务描述</span>
+      </div>
       </div>
       <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
          <div class="tags tags-list">
