--- a/app/views/recruitments/index.html.erb
+++ b/app/views/recruitments/index.html.erb
@@ -1,6 +1,6 @@
-<% content_for :banner do %>
-<%= render partial: "/share/banner"%>
-<% end %>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <%= image_tag "recruit_banner.jpg", alt: "核桃在线教育平台", width: "100%" %>
+</div>
 <div class="container">
   <div class="row recruit_title">
     <div class="col-md-5"><hr class="divider"></div>
