--- a/app/views/user/_form.html.erb
+++ b/app/views/user/_form.html.erb
@@ -1,15 +1,21 @@
 <%= simple_form_for @user, url: user_path(@user),wrapper: :horizontal_form,  html: { class: "form-horizontal" } do |f| %>
 	<%= f.input :nickname %>
-	<div class="form-group">
-		<label for="inputPassword3" class="col-sm-2 col-sm-offset-2 control-label">我的头像</label>
-		<div class="col-sm-4">
-			<%=image_tag"personal_head.png"%>
+
+	<% if @user.image.present? %>
+		<div class="form-group">
+			<%= label_tag :image, '已上传头像', class: 'col-sm-2 col-sm-offset-2 control-label' %>
+			<div class="col-sm-6 container">
+				<%= image_tag(@user.try(:image).try(:avatar), size: "200x200") %>
+			</div>
 		</div>
-		<div class="col-sm-2">
-			图片大小不能超过2M，<br>
-			支持JPG，GIF，PNG图片格式
+	<% end %>
+	<div class="form-group">
+		<%= f.label :image, '我的头像', class: 'col-sm-2 col-sm-offset-2 control-label' %>
+		<div class="col-sm-6 container">
+			<%= f.file_field :image %>
 		</div>
 	</div>
+
 	<%= f.input :name %>
 	<%= f.input :department, collection: User.departments, prompt: "请选择院系", label: "所属院系" %>
 	<%= f.input :major, collection: User.majors, prompt: "请选择专业", label: "所属专业" %>
@@ -29,3 +35,8 @@
 		</div>
 	</div>
 <% end %>
+<script type="text/javascript">
+  $(function(){
+    $("#user_image").fileinput();
+  });
+</script>
