--- a/app/views/recruitments/index.html.erb
+++ b/app/views/recruitments/index.html.erb
@@ -1,5 +1,5 @@
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <%= image_tag "recruit_banner.jpg", alt: "核桃在线教育平台", width: "100%" %>
+  <%= image_tag "banner1.jpg", alt: "核桃在线教育平台", width: "100%" %>
 </div>
 <div class="container">
   <div class="row recruit_title">
