--- a/app/views/user/my_messages.html.erb
+++ b/app/views/user/my_messages.html.erb
@@ -9,7 +9,7 @@
 					<div class="row">
 						<div class="col-md-5"><hr class="divider"></div>
 						<div class="col-md-2 text-center my_data">
-							<span>2015-07-07</span>
+							<span>2015-07-31</span>
 						</div>
 						<div class="col-md-5"><hr class="divider"></div>
 					</div>
@@ -23,10 +23,10 @@
 								</div>
 								<div class="col-md-2" ><%= user_notification.notification.created_at.strftime("%Y-%m-%d")%></div>
 								<% user_project = query_user_project(user_notification.user, user_notification.notification.project)%>
-								<% if user_project.invite %>
+								<% if user_project && user_project.invite %>
 								  <div class="col-md-2 text-info text-center" >已通过申请
 								  <p>[<%= link_to "退出项目", uninvited_user_project_path(user_project), method: :patch, data: {confirm: "确认退出项目吗？"}%>]</p></div>
-								<% else %>
+								<% elsif user_project && !user_project.invite %>
 							    <div class="col-md-2" ><%= link_to "通过邀请", invited_user_project_path(user_project), method: :patch, data: {confirm: "确认通过邀请吗？"}%></div>
 							  <% end %>
 							</div>
