--- a/app/views/training_platform/share/_task_show.html.erb
+++ b/app/views/training_platform/share/_task_show.html.erb
@@ -1,151 +1,163 @@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-  <div id="rightTopContent">
-    <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="my-task">
-          <h3>任务详情</h3>
-          <hr class="my-line">
-        </div>
-      </div>
-    </div>
+	<div id="rightTopContent">
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+				<div class="my-task">
+					<h3>任务详情</h3>
+					<hr class="my-line">
+				</div>
+			</div>
+		</div>
 
-    <div class="row task-ops">
-      <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
-        <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          <%= @task.try(:task_category).try(:name).try(:truncate, 5, omission: "..") || "所属任务"%>
-          <span class="caret my-caret"></span>
-        </button>
-        <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-          <% @project.task_categories.each do |tc| %>
-            <li>
-              <%= link_to tc.name, move_category_training_platform_project_task_path(@project, @task, task_category: tc.id) , remote: true, format: :js %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
+		<div class="row task-ops">
+			<div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
+				<button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+					<%= @task.try(:task_category).try(:name).try(:truncate, 5, omission: "..") || "所属任务"%>
+					<span class="caret my-caret"></span>
+				</button>
+				<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+					<% @project.task_categories.each do |tc| %>
+					<li>
+						<%= link_to tc.name, move_category_training_platform_project_task_path(@project, @task, task_category: tc.id) , remote: true, format: :js %>
+					</li>
+					<% end %>
+				</ul>
+			</div>
 
-      <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
-        <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          <%= @task.get_principal_user.try(:show_name) || "负责人" %>
-          <span class="caret my-caret"></span>
-        </button>
-        <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-          <% @project.get_member.each do |member| %>
-            <li>
-            <%= link_to member.show_name, update_principal_training_platform_project_task_path(@project, @task, user: member.id) , remote: true, format: :js %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
+			<div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
+				<button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+					<%= @task.get_principal_user.try(:show_name) || "负责人" %>
+					<span class="caret my-caret"></span>
+				</button>
+				<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+					<% @project.get_member.each do |member| %>
+					<li>
+						<%= link_to member.show_name, update_principal_training_platform_project_task_path(@project, @task, user: member.id) , remote: true, format: :js %>
+					</li>
+					<% end %>
+				</ul>
+			</div>
 
-          <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 input-append date form_datetime">
-            <strong class="datepicker"><input size="9" type="text" value="截止日期"  readonly></strong>
-            <span class="add-on pull-right"><i class="icon-th hidden"></i></span>
-          </div>
+			<!--************************************************************************************************************-->
 
-      <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
-        <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          <%= Task::Level[@task.level.to_sym]%>
-          <span class="caret my-caret"></span>
-        </button>
-        <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-          <% Task::Level.each do |k,v| %>
-            <li>
-            <%= link_to v, level_training_platform_project_task_path(@project, @task, level: k) , remote: true, format: :js %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
+			<div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 input-append date form_datetime">
+				<span class="datepicker">
+					<% if @task.end_time.present? %>
+					<input size="9" type="text" value="<%= @task.end_time %>" id="endTime" readonly>
+					<% else %>
+					<input size="9" type="text" value="" id="endTime" placeholder="截止时间" readonly>
+					<% end %>
+				</span>
+				<span class="add-on pull-right"><i class="icon-th hidden"></i></span>
+			</div>
+			<!--************************************************************************************************************-->
 
-      <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
-        <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          附件
-        </button>
-      </div>
+			<div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
+				<button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+					<%= Task::Level[@task.level.to_sym]%>
+					<span class="caret my-caret"></span>
+				</button>
+				<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+					<% Task::Level.each do |k,v| %>
+					<li>
+						<%= link_to v, level_training_platform_project_task_path(@project, @task, level: k) , remote: true, format: :js %>
+					</li>
+					<% end %>
+				</ul>
+			</div>
 
-      <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
-        <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          操作
-          <span class="caret my-caret"></span>
-        </button>
-        <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-          <li>
-          <%= link_to("删除", training_platform_project_task_path(@project, @task), method: :delete) %>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="row task-content">
-      <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12 task-description">
-      <h4> <%= @task.name %></h4>
-      <div class="dis">
-        <span>这里是任务描述</span>
-      </div>
-      </div>
-      <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
-         <div class="tags tags-list">
-          <% @task.tag_list.each do |tag| %>
-            <span class="tag"><%= tag %>
-            <%= link_to("x", remove_training_platform_project_task_path(@project,@task, tag: tag) , class: "close", remote: true, format: :js) %>
-            </span>
-          <% end %>
-          <input type="input" name="tags" id="addTag" value="" placeholder="请输入标签" >
-          </div>
-       </div> 
+			<div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
+				<button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+					附件
+				</button>
+			</div>
 
-      <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
-        <div class="tags tags-list">
-          <% @task.get_helpers.each do |user| %>
-            <span class="tag"><%= user.show_name %>
-            <%= link_to("x", remove_helper_training_platform_project_task_path(@project,@task, user: user.id) , class: "close", remote: true, format: :js, method: :delete) %>
-            </span>
-          <% end %>
-          <select id="helperSelect">
-            <option>请选择协同者</option>
-            <% @project.get_member.each do |member| %>
-              <option value="<%= member.id %>"><%= member.show_name %></option>
-            <% end %>
-          </select>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  <%= render partial: 'training_platform/share/comment', locals: {commentable: @task}%>
+			<div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
+				<button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+					操作
+					<span class="caret my-caret"></span>
+				</button>
+				<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+					<li>
+						<%= link_to("删除", training_platform_project_task_path(@project, @task), method: :delete) %>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row task-content">
+			<div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12 task-description">
+				<h4> <%= @task.name %></h4>
+				这里是任务描述
+			</div>
+			<div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
+				<div class="tags tags-list">
+					<% @task.tag_list.each do |tag| %>
+					<span class="tag"><%= tag %>
+						<%= link_to("x", remove_training_platform_project_task_path(@project,@task, tag: tag) , class: "close", remote: true, format: :js) %>
+					</span>
+					<% end %>
+					<input type="input" name="tags" id="addTag" value="" placeholder="请输入标签" >
+				</div>
+			</div> 
+
+			<div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
+				<div class="tags tags-list">
+					<% @task.get_helpers.each do |user| %>
+					<span class="tag"><%= user.show_name %>
+						<%= link_to("x", remove_helper_training_platform_project_task_path(@project,@task, user: user.id) , class: "close", remote: true, format: :js, method: :delete) %>
+					</span>
+					<% end %>
+					<select id="helperSelect">
+						<option>请选择协同者</option>
+						<% @project.get_member.each do |member| %>
+						<option value="<%= member.id %>"><%= member.show_name %></option>
+						<% end %>
+					</select>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<%= render partial: 'training_platform/share/comment', locals: {commentable: @task}%>
 </div>
 
 <script type="text/javascript">
 
-  $(".form_datetime").datetimepicker({
-    format: "yyyy/mm/dd",
-    viewSelect: 2,
-    minView: 2,
-    pickerPosition: 'bottom-left',
-    autoclose: true,
-    startDate: new Date(),
-  });
+		$(function(){
+			$(".form_datetime").datetimepicker({
+				format: "yyyy/mm/dd",
+				viewSelect: 2,
+				minView: 2,
+				pickerPosition: 'bottom-left',
+				autoclose: true,
+				startDate: new Date()
+			}).on('changeDate', function(ev){
+				$.ajax({
+					url: "<%= training_platform_project_task_path(@project, @task)%>.js",
+					type: "put",
+					data: {endTime: ev.date.valueOf()}
+				});
+			});		
 
+			$("#addTag").blur(function(){
+				if($(this).val() != ""){
+					$.ajax({
+						url: "<%= tag_training_platform_project_task_path(@project, @task)%>.js",
+						type: "post",
+						data: {tag: $(this).val()}
+					});
+				}
+			});
 
-  $(function(){
-    $("#addTag").blur(function(){
-      if($(this).val() != ""){
-        $.ajax({
-          url: "<%= tag_training_platform_project_task_path(@project, @task)%>.js",
-          type: "post",
-          data: {tag: $(this).val()}
-        });
-      }
-    });
+			$("#helperSelect").change(function(){
+				if($(this).val() != ""){
+					$.ajax({
+						url: "<%= add_helper_training_platform_project_task_path(@project, @task)%>.js",
+						type: "post",
+						data: {user: $(this).val()}
+					});
+				}
+			});
+		});
 
-    $("#helperSelect").change(function(){
-      if($(this).val() != ""){
-        $.ajax({
-          url: "<%= add_helper_training_platform_project_task_path(@project, @task)%>.js",
-          type: "post",
-          data: {user: $(this).val()}
-        });
-      }
-    });
-  });
-  
-</script>
+	</script>
