--- a/app/views/training_platform/user_projects/_form.html.erb
+++ b/app/views/training_platform/user_projects/_form.html.erb
@@ -83,32 +83,12 @@
     });
   });
 </script>
-<!-- typeahead输入关键词自动提示效果 -->
+
 <script type="text/javascript">
-  $(document).ready(function(){
-    window.query_cache = {};
+  $(function(){
     var url = $('#ace_modal_form').data("url");
-    $('#ace_modal_form').typeahead({
-      source:function(query,process){
-        if(query_cache[query]){
-          process(query_cache[query]);
-          return;
-        }
-        if( typeof searching != "undefined") {
-          clearTimeout(searching);
-          process([]);
-        }
-        searching = setTimeout(function() {
-          return $.getJSON(
-            url,
-            { q:query },
-            function(data){
-              query_cache[query] = data;
-              return process(data);
-            }
-          );
-        }, 300);
-      }
-    });
+    $.get(url, function(data){
+      $("#ace_modal_form").typeahead({ source:data });
+    },'json');
   });
 </script>
